--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "scss": "node-sass --output public/styles styles",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "local": "./node_modules/.bin/nodemon --ignore public/",
@@ -19,6 +20,7 @@
     "knex": "^0.11.7",
     "knex-logger": "^0.1.0",
     "morgan": "^1.7.0",
+    "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.9.8",
     "pg": "^6.0.2"
   },
