--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "scss": "node-sass --output public/styles styles",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node-sass --output public/styles styles && node server.js",
     "local": "./node_modules/.bin/nodemon --ignore public/",
     "knex": "./node_modules/.bin/knex"
   },
