--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.7.0",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.9.8",
-    "pg": "^6.0.2"
+    "pg": "^6.0.2",
+    "twilio": "^3.30.2"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
